Fri, Feb 17, 2023, 7:42 AM +07:00

--- a/final-project/masak-apa/templates/ingredients.html
+++ b/final-project/masak-apa/templates/ingredients.html
@@ -35,7 +35,7 @@
         </div>
         <div class="form-group mb-3">
             <label for="description">Ingredient description</label>
-            <textarea name="description" class="form-control" placeholder="enter description"></textarea>
+            <textarea name="description" class="form-control" placeholder="Describe a little bit about the ingredient"></textarea>
         </div>
         <div class="form-group mb-3">
             <button class="btn btn-primary form-control" type="submit" value="submit">Add</button>
