--- a/final-project/masak-apa/templates/units_edit.html
+++ b/final-project/masak-apa/templates/units_edit.html
@@ -9,10 +9,10 @@
     <h2 class="text-center">Edit Measurement Units</h2>
     <form action="/admin/units/{{ unit['id'] }}/edit" method="post">
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" value="{{ unit['name'] }}" id="unit" name="unit" type="text">
+            <input autocomplete="off" autofocus class="form-control" value="{{ unit['name'] }}" id="unit" name="unit" type="text">
         </div>
         <div class="mb-3">
-            <button class="btn btn-primary" type="submit">Edit</button>
+            <button class="btn btn-primary form-control" type="submit">Edit</button>
         </div>
     </form>
 </div>
