--- a/final-project/masak-apa/templates/ingredients.html
+++ b/final-project/masak-apa/templates/ingredients.html
@@ -65,7 +65,8 @@
                 <td>{{ ingredient["name"] }}</td>
                 <td>{{ ingredient["origin"] }}</td>
                 <td>{{ ingredient["category"] }}</td>
-                <td><img src="/workspaces/89518378/final-project/masak-apa/static/uploads/{{ ingredient['image'] }}"></td>
+                <!-- <td><img src="/static/uploads/{{ ingredient['image'] }}" style="width: 10%"></td> -->
+                <td><a href="/static/uploads/{{ ingredient['image'] }}">View Image</a></td>
                 <td>
                     <a href="/admin/ingredients/{{ ingredient['id'] }}/edit" class="btn btn-warning">Edit</a>
                     <a href="/admin/ingredients/{{ ingredient['id'] }}/delete" onclick="return confirm('Are you sure you want to delete this item?');" class="btn btn-danger">Delete</a>
